[package]
authors = ["Nathan Musoke <nathan.musoke@gmail.com>"]
name = "olm"
version = "0.0.1"

[dependencies]
base64 = "0.6.0"
error-chain = "0.10.0"
rand = "0.3.16"
ring = "0.9.7"
untrusted = "0.5.1"
serde = "1.0.9"
serde_derive = "1.0.9"

[dependencies.ruma-identifiers]
git = "https://github.com/jplatte/ruma-identifiers"
branch = "synapse-workarounds"



[dev-dependencies]
futures = "0.1.14"
tokio-core = "0.1.8"
url = "1.5.1"

[dev-dependencies.ruma-client]
git = "https://github.com/musoke/ruma-client"
branch = "unstable-e2e"

[dev-dependencies.ruma-events]
git = "https://github.com/jplatte/ruma-events"
branch = "synapse-workarounds"
