[package]
authors = ["Nathan Musoke <nathan.musoke@gmail.com>"]
name = "olm"
version = "0.0.1"

[dependencies]
base64 = "0.6.0"
env_logger = "0.4.3"
error-chain = "0.10.0"
log = "0.3.8"
rand = "0.3.16"
ring = "0.13.0-alpha"
rust-crypto = "0.2.36"
serde = "1.0.9"
serde_derive = "1.0.9"
untrusted = "0.6"

[dependencies.ruma-identifiers]
branch = "synapse-workarounds"
git = "https://github.com/jplatte/ruma-identifiers"

[dev-dependencies]
futures = "0.1.14"
tokio-core = "0.1.8"
url = "1.5.1"

[dev-dependencies.ruma-client]
branch = "unstable-e2e"
git = "https://github.com/musoke/ruma-client"

[dev-dependencies.ruma-events]
branch = "synapse-workarounds"
git = "https://github.com/jplatte/ruma-events"
