[package]
authors = ["Nathan Musoke <nathan.musoke@gmail.com>"]
name = "olm"
version = "0.0.1"

[dependencies]
base64 = "0.6.0"
env_logger = "0.4.3"
failure = "0.1.1"
log = "0.3.8"
rand = "0.3.16"
ring = "0.9.7"
rust-crypto = "0.2.36"
serde = "1.0.9"
serde_derive = "1.0.9"
serde_json = "1.0.9"
untrusted = "0.5.1"

[dependencies.one-time-keys]
path = "one-time-keys"

[dependencies.olm-util]
path = "olm-util"

[dependencies.ruma-client-api]
branch = "unstable-e2e"
git = "https://github.com/musoke/ruma-client-api"

[dependencies.ruma-identifiers]
branch = "synapse-workarounds"
git = "https://github.com/jplatte/ruma-identifiers"

[dependencies.ruma-signatures]
branch = "unstable-e2e"
git = "https://github.com/musoke/ruma-signatures"

[dev-dependencies]
tokio-core = "0.1.8"
url = "1.5.1"

[dev-dependencies.futures-await]
git = "https://github.com/alexcrichton/futures-await"

[dev-dependencies.ruma-client]
branch = "unstable-e2e"
git = "https://github.com/musoke/ruma-client"

[dev-dependencies.ruma-events]
branch = "synapse-workarounds"
git = "https://github.com/jplatte/ruma-events"

[workspace]
